Changelog for collective.beaker
===============================

1.0b2 (unreleased)
------------------

    - Provide better testing tools and more resilient test setup.
      [optilude]

    - Make the ZCML directive more resilient to configurations where there is
      no product_config. This can happen in test setup, for example.
      [optilude]

1.0b1 (2009-12-10)
------------------

    - Initial release
      [optilude]
