@@ -34,14 +34,16 @@ def closeSession(request):
             session.persist()
             sessionInstructions = session.request
             if sessionInstructions.get('set_cookie', False):
-                
-                cookieOut = sessionInstructions['cookie_out']
-                cookieObj = session.cookie[session.key]
-                cookieArgs = dict([(k,v) for k,v in cookieObj.items() if v])
-                
-                if cookieOut:
-                    cookieArgs.setdefault('path', session._path)
-                    request.response.setCookie(cookieObj.key, cookieObj.value, **cookieArgs)
+                if sessionInstructions['cookie_out']:
+                    cookieObj = session.cookie[session.key]
+                    
+                    key = cookieObj.key
+                    value = session.cookie.value_encode(cookieObj.value)[1]
+                    
+                    args = dict([(k,v) for k,v in cookieObj.items() if v])
+                    args.setdefault('path', session._path)
+                    
+                    request.response.setCookie(key, value, **args)
 
 # Event handlers
 
